--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 </head>
 <body>
-<audio id="audio" src="../../../Documents/GitHub/MartinSolheim.github.io/resources/looperDrone12.mp3" ></audio>
+<audio id="audio" src="/resources/looperDrone12.mp3" ></audio>
 <div class="contentBefore" id="contentBefore"></div>
 <div class="content">
     <h1>Encryption Abyss</h1>
