jesus, hvorfor vil ikke musikken funke

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Encryption Abyss</title>
+    <title>cipherHell</title>
     <script src="crypt.js"></script>
     <link rel="stylesheet" href="cryptStyle.css">
 
@@ -11,7 +11,7 @@
 <audio id="audio" src="/resources/looperDrone.mp3" ></audio>
 <div class="contentBefore" id="contentBefore"></div>
 <div class="content">
-    <h1>Encryption Abyss</h1>
+    <h1>cipherHell</h1>
     <p>not much here yet. ill add more soon</p>
     <br>
 
