jesus, hvorfor vil ikke musikken funke

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>cipherHell</title>
-    <script src="crypt.js"></script>
     <link rel="stylesheet" href="cryptStyle.css">
+    <script src="crypt.js"></script>
 
 </head>
 <body>
-<audio id="audio" src="/resources/looperDrone.mp3" ></audio>
+<audio id="audio" src="resources/looperDrone.mp3" ></audio>
 <div class="contentBefore" id="contentBefore"></div>
 <div class="content">
     <h1>cipherHell</h1>
