vigenere cipher added

--- a/index.html
+++ b/index.html
@@ -5,14 +5,15 @@
     <title>cipherHell</title>
     <link rel="stylesheet" href="cryptStyle.css">
     <script src="crypt.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
 </head>
 <body>
 <audio id="audio" src="resources/looperDrone.mp3" ></audio>
 <div class="contentBefore" id="contentBefore"></div>
 <div class="content">
-    <h1>cipherHell</h1>
-    <p>not much here yet. ill add more soon <sup>TM</sup></p>
+    <h1>CipherHell</h1>
+    <p></p>
     <br>
 
     <form class="form" id="inForm">
@@ -32,6 +33,7 @@
     <select id="selectAlgType">
         <option value="ROT13">ROT13</option>
         <option value="ROTN">ROT N</option>
+        <option value="VIG">Vigenére cipher</option>
         <option value="ELDFUTHARK">Elder Futhark</option>
         <option value="FULLWIDTH">ａｅｓｔｈｅｔｉｃ</option>
         <option value="PRINT">Print</option>
