morse code funker nesten

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     </select>
     <br>
     <select id="selectAlgType">
+        <option value="MORSE">International morse code</option>
         <option value="ROT13">ROT13</option>
         <option value="ROTN">ROT N</option>
         <option value="VIG">Vigenére cipher</option>
