morse works(i think)

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="cryptStyle.css">
     <script src="crypt.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+    <link rel=" shortcut icon" href="./resources/logo.png">
 
 </head>
 <body>
