Røverspråk (in norwegian), fixed background.

--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@
         <option value="VIG">Vigenére cipher</option>
         <option value="ELDFUTHARK">Elder Futhark</option>
         <option value="FULLWIDTH">ａｅｓｔｈｅｔｉｃ</option>
+        <option value="ROVER">RøverSpråk</option>
         <option value="PRINT">Print</option>
     </select>
     <br><br>
